crates/jarl-core/src/lints/dplyr/snapshots/jarl_core__lints__dplyr__tests__fix_magrittr.snap
---
source: crates/jarl-core/src/lints/dplyr/mod.rs
expression: "get_fixed_text(vec![\"x %>% group_by(grp) %>% summarize(a = mean(b)) %>% ungroup()\",],\n\"dplyr_group_by_ungroup\", None)"
---
OLD:
====
x %>% group_by(grp) %>% summarize(a = mean(b)) %>% ungroup()
NEW:
====
x %>% summarize(a = mean(b), .by = grp)
