crates/jarl-core/src/lints/dplyr/snapshots/jarl_core__lints__dplyr__tests__fix_namespaced.snap
---
source: crates/jarl-core/src/lints/dplyr/mod.rs
expression: "get_fixed_text(vec![\"x |> dplyr::group_by(grp) |> dplyr::summarize(a = mean(b)) |> dplyr::ungroup()\",],\n\"dplyr_group_by_ungroup\", None)"
---
OLD:
====
x |> dplyr::group_by(grp) |> dplyr::summarize(a = mean(b)) |> dplyr::ungroup()
NEW:
====
x |> dplyr::summarize(a = mean(b), .by = grp)
