crates/jarl-core/src/lints/dplyr/snapshots/jarl_core__lints__dplyr__tests__no_fix_not_piped.snap
---
source: crates/jarl-core/src/lints/dplyr/mod.rs
expression: "get_fixed_text(vec![\"group_by(x, grp) |> summarize(a = mean(b)) |> ungroup()\",],\n\"dplyr_group_by_ungroup\", None)"
---
OLD:
====
group_by(x, grp) |> summarize(a = mean(b)) |> ungroup()
NEW:
====
group_by(x, grp) |> summarize(a = mean(b)) |> ungroup()
